--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ hs_err_pid*
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio
 
 *.iml
+python_test.py
+.ipynb
 
 ## Directory-based project format:
 .idea/
